--- a/boot/application-test2.yml
+++ b/boot/application-test2.yml
@@ -1,2 +1,6 @@
 #sql
-hello = hello world
+spring
+    datasource
+           url : jdbc:mysql://10.0.0.10:3306/manage?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
+           username : root
+           password : 123456
